<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraitLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="507dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="@font/cookies"
            android:gravity="center"
            android:text="@string/registration"
            android:textSize="35sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtFnm"
                android:layout_width="98dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/first_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtFnm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/cookies"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLnm"
                android:layout_width="98dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:text="@string/last_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtLnm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/cookies"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <Button
            android:id="@+id/btnClr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cookies"
            android:text="@string/clear"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cookies"
                android:text="@string/back"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnEnt"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cookies"
                android:text="@string/enter"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>