<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraitLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="507dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtHNY"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="@font/cookies"
            android:gravity="center"
            android:text="@string/happy_new_year"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="283dp"
            app:srcCompat="@drawable/main" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnTpLft"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cookies"
                    android:text="@string/registration"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnBtLft"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cookies"
                    android:text="@string/result"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnTpRgt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cookies"
                    android:text="@string/wish"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnBtRgt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cookies"
                    android:text="@string/exit"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="54dp" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cookies"
            android:gravity="end"
            android:text="Harin Thananam 115910400338-2" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>