<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".WishActivity">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="507dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="@font/cookies"
            android:gravity="center"
            android:text="@string/wish"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="180dp"
                android:layout_height="114dp">

                <RadioButton
                    android:id="@+id/radIshtar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/cookies"
                    android:text="@string/love"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/radEreshkigal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/cookies"
                    android:text="@string/career"
                    android:textSize="16sp"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/swIshtar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cookies"
                    android:text="@string/preview"
                    android:textSize="16sp"/>

                <Switch
                    android:id="@+id/swEreshkigal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cookies"
                    android:text="@string/preview"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="286dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgEreshkigal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/x1"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/imgIshtar"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:srcCompat="@drawable/x2"
                android:contentDescription="TODO" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cookies"
                android:text="Back"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnBls"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cookies"
                android:text="Blessing"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>